--- a/calorie_tracker/Cargo.toml
+++ b/calorie_tracker/Cargo.toml
@@ -8,3 +8,5 @@ chrono = { version = "0.4", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 fuzzy-matcher = "0.3.7"
 serde_json = "1.0"
+colored = "2.0"
+dialoguer = "0.10.0"
