--- a/calorie_tracker/Cargo.toml
+++ b/calorie_tracker/Cargo.toml
@@ -5,8 +5,10 @@ edition = "2021"
 
 [dependencies]
 chrono = { version = "0.4", features = ["serde"] }
-serde = { version = "1.0", features = ["derive"] }
 fuzzy-matcher = "0.3.7"
 serde_json = "1.0"
 colored = "2.0"
 dialoguer = "0.10.0"
+tokio = { version = "1.0", features = ["full"] }
+reqwest = { version = "0.11", features = ["json"] }
+serde = { version = "1.0", features = ["derive"] }
